--- a/Project/src/GUI/CrazyEightsGUI.fxml
+++ b/Project/src/GUI/CrazyEightsGUI.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fillWidth="false" maxHeight="697.0" maxWidth="1000.0" prefHeight="691.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller">
+<VBox fillWidth="false" maxHeight="697.0" maxWidth="1000.0" prefHeight="691.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
   <children>
     <MenuBar prefHeight="25.0" prefWidth="1000.0" VBox.vgrow="NEVER">
       <menus>
@@ -88,7 +88,7 @@
                   </Label>
                </children>
             </GridPane>
-            <GridPane prefHeight="665.0" prefWidth="999.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <GridPane fx:id="mainGrid" prefHeight="665.0" prefWidth="999.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -105,17 +105,13 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <ImageView fx:id="deckImg" fitHeight="143.0" fitWidth="111.0" pickOnBounds="true" preserveRatio="true" translateX="25.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                  <ImageView fx:id="deckImg" fitHeight="158.0" fitWidth="120.0" onMouseClicked="#draw" pickOnBounds="true" preserveRatio="true" translateX="25.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <image>
                         <Image url="@images/back5.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="pileImg" fitHeight="138.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true" translateX="25.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
-                     <image>
-                        <Image url="@images/cards/JH.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="134.0" fitWidth="102.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+                  <ImageView fx:id="pileImg" fitHeight="158.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" translateX="25.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+                  <ImageView fitHeight="134.0" fitWidth="111.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
                      <image>
                         <Image url="@images/back5.png" />
                      </image>
@@ -136,6 +132,16 @@
                      </image>
                   </ImageView>
                </children>
+            </GridPane>
+            <GridPane fx:id="playerHandGrid1" alignment="TOP_CENTER" layoutX="174.0" layoutY="431.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="158.0" prefWidth="655.0">
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+            <GridPane fx:id="playerHandGrid2" alignment="TOP_LEFT" layoutX="171.0" layoutY="476.0" prefHeight="155.0" prefWidth="123.0">
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
             </GridPane>
          </children>
     </AnchorPane>
