--- a/Project/src/GUI/CrazyEightsGUI.fxml
+++ b/Project/src/GUI/CrazyEightsGUI.fxml
@@ -138,7 +138,12 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
             </GridPane>
-            <GridPane fx:id="playerHandGrid2" alignment="TOP_LEFT" layoutX="171.0" layoutY="476.0" prefHeight="155.0" prefWidth="123.0">
+            <GridPane fx:id="playerHandGrid2" alignment="TOP_LEFT" layoutX="171.0" layoutY="465.0" prefHeight="155.0" prefWidth="123.0">
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+            <GridPane fx:id="playerHandGrid3" layoutX="173.0" layoutY="495.0" prefHeight="155.0" prefWidth="123.0">
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
